<resources>
    <string name="battery_percentage">Battery: %1$d%</string>
    <string name="txtview_phone">Login Using Phone Number</string>
    <string name="app_name">SolarGuide</string>
    <string name="get_started">Get Started</string>
    <string name="app_icon">App Icon</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="sign_in">Login</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="IT62">IT-62</string>
    <string name="created_by">Created By</string>
    <string name="_06_40_am">06:40 AM</string>
    <string name="pamp_ph">Pampanga, Philippines</string>
    <string name="_20_april_2012_20_08_pm">20 April 2012, 20:08 PM</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_29_c">29°C</string>
    <string name="min_temp_05_05_am">Min Temp: 05:05 AM</string>
    <string name="max_temp_05_05_pm">Max Temp: 05:05 PM</string>
    <string name="todo">TODO</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="_06_40_a_m">06:40 AM</string>
    <string name="_06_40_a__m">06:40 AM</string>
    <string name="_todo">TODO</string>
    <string name="humidity">Humidity</string>
    <string name="to_do">TODO</string>
    <string name="to__do">TODO</string>
    <string name="todo_">TODO</string>
    <string name="_06_40_am_">06:40 AM</string>
    <string name="_06_40_am___">06:40 AM</string>
    <string name="sunset">Sunset</string>
    <string name="todo_____">TODO</string>
    <string name="pampanga_philippines">Pampanga,Philippines</string>
    <string name="welcome_back_login_to_continue">Welcome Back! Login To Continue.</string>
    <string name="todo___">TODO</string>
    <string name="or">Or</string>
    <string name="pic">TODO</string>
    <string name="type_your_number">Type your number</string>
    <string name="send_otp">Send otp</string>
    <string name="_63">+63</string>
    <string name="login_with_nmobile_number">Login with \nMobile number</string>
    <string name="todo______">TODO</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="_0">0</string>
    <string name="__0">0</string>
    <string name="____0">0</string>
    <string name="_____0">0</string>
    <string name="_0_">0</string>
    <string name="_0__">0</string>
    <string name="_TO_DO_">TODO</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="battery_fully_charged">Fully Charged</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_not_charging">Not Charging</string>
    <string name="battery_percentage_text">Battery Percentage: %1$d%%</string>
    <string name="available_devices">Devices</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
</resources>