<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3F3"
    tools:context=".OTPActivity">

    <Button
        android:id="@+id/verifyOTPBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/verify"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendTextView" />

    <TextView
        android:id="@+id/resendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/verifyOTPBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <EditText
        android:id="@+id/otpEditText1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:autofillHints=""
        android:background="#FFF0D2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_0"
        android:inputType="number"
        android:textColor="@color/primary_color"
        android:textColorHint="#747272"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/otpEditText2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="#FFF0D2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/__0"
        android:inputType="number"
        android:textColor="@color/primary_color"
        android:textColorHint="#747272"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText1"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/otpEditText3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="#FFF0D2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/____0"
        android:inputType="number"
        android:textColor="@color/primary_color"
        android:textColorHint="#747272"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/otpEditText4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="#FFF0D2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_____0"
        android:inputType="number"
        android:textColor="@color/primary_color"
        android:textColorHint="#747272"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText3"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


    <EditText
        android:id="@+id/otpEditText5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="#FFF0D2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_0_"
        android:inputType="number"
        android:textColor="@color/primary_color"
        android:textColorHint="#747272"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText4"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


    <EditText
        android:id="@+id/otpEditText6"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#FFF0D2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_0__"
        android:inputType="number"
        android:textColor="@color/primary_color"
        android:textColorHint="#747272"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/otpEditText5"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:contentDescription="@string/_TO_DO_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/otp_verification" />

    <ProgressBar
        android:id="@+id/otpProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:indeterminateTint="@color/primary_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>